--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,68 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.services{
+    display: flex;
+    margin-top: 100px;
+    flex-flow: column;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.services h3 {
+    font-size: 3rem;
+    margin-left: -3%;
+    z-index: 1;
+    text-shadow: 5px 5px 5px #191923;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.services img{ min-height: 7rem !important; max-height: 7rem !important;}
+.services .services__item{display: inline-flex; align-items: center; }
+.services .services__item:nth-child(2){justify-content: center;}
+.services .services__item:nth-child(2) h3 {margin-left: -21%;}
+.services .services__item:nth-child(3) h3 { margin-right: -3%; }
+
+.services .services__item:nth-child(3){
+    justify-content: end;
+    flex-flow: row-reverse;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.about{
+    display: flex;
+    align-items: center;
+    margin-top: 150px;
 }
+.about__description {
+    width: 140%;
+    padding: 0px 50px 50px 50px;
+    border: 3px solid #222231;
+    border-radius: 20px;}
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
+.about h3{font-size: 3.5rem; margin-top: -30px; text-shadow: -15px -15px 0px #222231;}
+.about img {width: 400px;}
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+.quote{
+    display: flex;
+    flex-flow: column;
     width: 100%;
-    flex-direction: column;
-  }
+    margin-top:150px;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    border: 2px solid #222231 ;
+}
+
+.quote h3{font-size: 2rem; text-shadow: 5px 5px 8px #191923;}
+.quote h3::before{
+    position: absolute;
+    content: " '' ";
+    display: flex;
+    justify-content: center;
+    left: 49%;
+    margin-top: -100px;
+    font-family: serif;
+    font-size: 25rem;
+    color: #baff29;
+    z-index: -1;
+
+}
+.project{
+    height: 400px;
+    width: 100%;
+    background-color: darkslateblue;
 }
