--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,23 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: #191923;
+    color: #fafafa;
+
 }
+
+h1, h2, h3, h4 {
+  font-family: 'Space Grotesk', sans-serif;
+}
+
+.nav {font-family: 'Space Grotesk', sans-serif;}
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
+p{font-size: 1.25rem; line-height: 1.4;}
 
 * {
   box-sizing: border-box;
